# LLM-INT

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
HW0-Programming Capabilities/: completions.json  completions.py  executions.py  notebook.ipynb
HW1-Math Word Problems/: math_word_problems.py  math_word_problems_12504821.out  run_program.sh
HW2-SFT/: base_solutions.json  execute_racket.py  generate_racket.py  lr0.0001-epoch9_solutions.json  lr0.0005-epoch4_solutions.json  lr2e-05-epoch2_solutions.json  sft.py
HW3-Thomas The Agent/: notebook.py
class-10-14/: oct14.py
class-10-14/__marimo__/session/: oct14.py.json
class-10-21/: logit_client.py  run.py
class-10-24/: nlcf_marimo_notebook_skeleton.py
class-10-7/: main.py  pyproject.toml  test.py
class-11-4/: dspy_gepa.py
class-9-19/: training_basics.ipynb
class-9-9/: notebook.ipynb
proj/: .env.example  .gitignore  README.md  compiler.py  eval.py  example.json  example_2.json  example_2_desc.txt  example_3.json  example_3_desc.txt  example_4.json  example_5.json  example_6.json  example_6_desc.txt  example_7_desc.txt  game_loop.py  gameplay_interface.py  json_generator.py  json_validator.py  llm_client.py  llm_integration.py  temp.py  train.py
proj/dataset/: train.json  val.json
proj/game_jsons_and_txts/: example_1.json  example_10.json  example_1_desc.txt  example_2.json  example_3.json  example_3_desc.txt  example_4.json  example_4_desc.txt  example_5.json  example_5_desc.txt  example_6.json  example_7.json  example_8.json  example_9.json
proj/scripts/: generate_and_compile.py
(+137 files in other folders)
