[project]
name = "llm-int"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "dspy>=3.0.3",
    "huggingface-hub[cli]>=0.35.3",
    "litellm>=1.77.7",
    "marimo[mcp]>=0.16.5",
    "matplotlib>=3.10.7",
    "nnsight>=0.5.8",
    "openai>=2.2.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]
